<?xml version="1.0"?>
    <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
    <package format="3">
      <name>bag_to_kitti_converter</name>
      <version>0.0.0</version>
      <description>Converts ROS2 Bag to KITTI format for PointPillars</description>
      <maintainer email="antonioluissgh@gmail.com">antonio</maintainer>
      <license>Apache-2.0</license>

      <buildtool_depend>ament_python</buildtool_depend>

      <!-- Added dependencies -->
      <exec_depend>rclpy</exec_depend>
      <exec_depend>sensor_msgs</exec_depend>
      <exec_depend>visualization_msgs</exec_depend>
      <exec_depend>tf2_msgs</exec_depend>
      <exec_depend>geometry_msgs</exec_depend>
      <exec_depend>rosbag2_py</exec_depend>
      <exec_depend>sensor_msgs_py</exec_depend>

      <!-- Non-ROS dependencies -->
      <!-- We installed these with pip, but listing them is good practice -->
      <exec_depend>python3-numpy</exec_depend>
      <!-- tf-transformations is not a standard rosdep key, so pip install is required -->


      <test_depend>ament_copyright</test_depend>
      <test_depend>ament_flake8</test_depend>
      <test_depend>ament_pep257</test_depend>
      <test_depend>python3-pytest</test_depend>

      <!-- 
        FIXED: Added the <export> tag to explicitly state the build type.
        This will stop colcon from looking for a CMakeLists.txt file.
      -->
      <export>
        <build_type>ament_python</build_type>
      </export>
      
    </package>